# ChangeLog for media-tv/xbmc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $

  05 Sep 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Generate autotools since upstream no longer includes them in svn #283722
  by Kevin.

*xbmc-9.04.1 (05 Sep 2009)

  05 Sep 2009; Mike Frysinger <vapier@gentoo.org> +xbmc-9.04.1.ebuild:
  Version bump #283608 by zehner.

  27 Aug 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Force internal faad2 for now #278400. Pull in more deps #279062 #281078.

  27 Aug 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Drop unzip step since upstream has integrated it #282739 by Jan
  Vansteenkiste.

  27 Jul 2009; Stephanie Lockwood-Childs <wormo@gentoo.org>
  xbmc-9.04.ebuild, xbmc-9999.ebuild:
  Use http instead of https for source download (thanks to Xake, bug #279174)

  20 Jul 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Add more libraries to DEPEND #278294 by BT and move to external libraries
  #275844 by candrews.

  20 Jul 2009; Mike Frysinger <vapier@gentoo.org> files/xbmc-9.04-gcc.patch:
  Update gcc-4.4 patch #277562 by Diego E. Pettenò.

  29 May 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9.04.ebuild,
  xbmc-9999.ebuild:
  Allow unrar-gpl for unrar needs #270728 by Mathy Vanvoorden.

*xbmc-9.04 (16 May 2009)

  16 May 2009; Mike Frysinger <vapier@gentoo.org> +xbmc-9.04.ebuild,
  +files/xbmc-9.04-gcc.patch:
  Version bump #269400 by Tim Bastiaenssens.

  16 May 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Add libsamplerate to DEPEND #269673 by Jan Vansteenkiste.

  29 Apr 2009; Mike Frysinger <vapier@gentoo.org> xbmc-9999:
  Dont install session anymore since upstream does it #267631 by BT and Jan
  Vansteenkiste, and stop bothering with the xbmc.sh wrapper since it has
  been updated as well.
