@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/Attic/xbmc-9.04.1.ebuild,v 1.1 2009/09/05 15:02:11 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/Attic/xbmc-9.04.1.ebuild,v 1.2 2009/09/26 11:45:58 vapier Exp $
 
 # XXX: be nice to split out packages that come bundled and use the
 #      system libraries ...
@@ -10,7 +10,7 @@ EAPI="2"
 inherit eutils
 
 # Use XBMC_ESVN_REPO_URI to track a different branch
-ESVN_REPO_URI=${XBMC_ESVN_REPO_URI:-http://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/linuxport/XBMC}
+ESVN_REPO_URI=${XBMC_ESVN_REPO_URI:-http://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk}
 ESVN_PROJECT=${ESVN_REPO_URI##*/svnroot/}
 ESVN_PROJECT=${ESVN_PROJECT%/XBMC}
 if [[ ${PV} == "9999" ]] ; then
